# Dynamic_env_swarm

./: .gitignore  CLAUDE.md  LICENSE  README.md  coupling_a_lock.md  phase0_substrate_prompt.md  phase1_2_prompt.md  phase3_prompt.md  pyproject.toml  severity_lock.md  test_nesting.py
che/: __init__.py
che/bench/: __init__.py  throughput.py
che/calibration/: __init__.py  coupling_a.py  estimates.py  figures.py  percolation.py  prop3.py
che/configs/: debug.yaml  phase1_accept.yaml  reference.yaml  severity_high.yaml  severity_low.yaml  severity_medium.yaml
che/env/: __init__.py  config.py  env.py  hazard.py  observation.py  structure.py  tasks.py  types.py
che/eval/: harness.py
che/scripts/: burnt_occupancy.py  def4_report.py  m30b_cross_matrix.py  m35_report.py  obs_alignment.py  plot_learning_curve.py  plot_m25_grid.py  plot_m33_figures.py  plot_population_curves.py  prop3_deficit.py  render_episode.py  run_m25_grid.sh  run_m30_def4.sh  run_m31b_obs_v2.sh  run_m33_prop3.sh  run_m35_grid.sh  vast_setup.sh
che/tests/: test_bench.py  test_calibration.py  test_coupling_a.py  test_env.py  test_eval_harness.py  test_frozen.py  test_hazard.py  test_ippo.py  test_lethality.py  test_metrics.py  test_nesting.py  test_pbt.py  test_percolation.py  test_prop3.py  test_reward_independence.py  test_scaffold.py  test_structure_weak.py
che/train/: __init__.py  ippo.py  networks.py  pbt.py  (+1 more)
docs/: decision_log.md  m06_probe.yaml  theory_foundations.md
phase2_results/: calibration.npz  calibration_crossing.npz  calibration_provenance.json  estimates.npz  phase2_report.md
(+223 files in other folders)
