[project]
name = "che"
version = "0.1.0"
description = "Compound Hostile Environment (CHE) swarm: pure-JAX MARL substrate + PBT/IPPO training"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.35",
    "flax>=0.10",
    "optax>=0.2.3",
    "distrax>=0.1.5",
    "chex>=0.1.87",
    "orbax-checkpoint>=0.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4.35"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["che"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["che/tests"]
addopts = "-q"
markers = [
    "slow: theory-scale MC tests (M2.3+); run with -m slow, excluded via -m 'not slow'",
]
